client/src/styles/index.scss
@import "src/styles/variables.scss";

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

body {
  background-color: #f5f5f5;
}

p {
  line-height: 34px;
}

.dark {
  background-color: $dark-mode;
  color: $white !important;
}

.App_header.dark {
  border-bottom: 3px solid $white !important;
}

.hover {
  display: inline-block;
  position: relative;
}
.hover::after {
  content: "";
  position: absolute;
  width: 100%;
  transform: scaleX(0);
  height: 4px;
  bottom: 0;
  left: 0;
  background-color: $text-color;
  transform-origin: bottom right;
  transition: transform 0.25s ease-out;
}

.hover.dark::after {
  content: "";
  position: absolute;
  width: 100%;
  transform: scaleX(0);
  height: 4px;
  bottom: 0;
  left: 0;
  background-color: $white;
  transform-origin: bottom right;
  transition: transform 0.25s ease-out;
}

.hover:hover::after {
  transform: scaleX(1);
  transform-origin: bottom left;
}

